fixed anchor jump height

--- a/themes/dracobit-twentysixteen/style.css
+++ b/themes/dracobit-twentysixteen/style.css
@@ -468,7 +468,7 @@ input[name="dracobit_signup_input"] {
 a.anchor {
   display: block;
   position: relative;
-  top: -55px;
+  top: -65px;
   visibility: hidden;
 }
 
